font color added

--- a/src/components/Icon/styles.scss
+++ b/src/components/Icon/styles.scss
@@ -25,6 +25,9 @@
     .contacto-image {
         margin-bottom: 24px;
     }
+    .description {
+        color: var(--gray-7);
+    }
 }
 
 @keyframes spin {
