introduced icon option in tags

--- a/src/components/Tag/styles.scss
+++ b/src/components/Tag/styles.scss
@@ -36,4 +36,8 @@
         background-color: var(--warning-color-4);
         color: var(--warning-color);
     }
+
+    .tag-icon {
+        margin-right: 4px;
+    }
 }
